src/main/java/com/example/bookshopapp/errors/EmptySearchException.java
package com.example.bookshopapp.errors;

public class EmptySearchException extends Exception {
    public EmptySearchException(String message) {
        super(message);
    }
}
